--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://mr54aq.github.io"
+baseurl = "https://mr54aq.github.io/portfolio4"
 languageCode = "en-us"
 title = "Hugo Theme Stack Starter"
 
